# notebooklm-py

./: pyproject.toml
.github/workflows/: nightly.yml
docs/: README.md  cli-reference.md  releasing.md
docs/contributing/: architecture.md  debugging.md  rpc-protocol.md  testing.md
docs/designs/: 2026-01-06-test-coverage-design.md  2026-01-06-test-migration.md  2026-01-09-multi-version-testing.md
docs/plans/: 2026-01-07-smart-download-cli-design.md
docs/reference/internals/: discovery.md  rpc-ui-reference.md
scripts/: heal_golden_notebook.py
src/notebooklm/: __init__.py  _artifacts.py  _chat.py  _core.py  _notebooks.py  _notes.py  _research.py  _sources.py  api_client.py  auth.py  client.py  notebooklm_cli.py  types.py
src/notebooklm/cli/: __init__.py  artifact.py  download.py  download_helpers.py  generate.py  helpers.py  note.py  notebook.py  options.py  session.py  source.py
src/notebooklm/data/: SKILL.md
src/notebooklm/rpc/: __init__.py  types.py
src/notebooklm/services/: __init__.py  artifacts.py  conversation.py  notebooks.py  sources.py
tests/: conftest.py
tests/e2e/: conftest.py  test_artifacts.py  test_audio_video.py  test_downloads.py  test_file_upload.py  test_full_workflow.py  test_generation.py  test_notebooks.py  test_notes.py  test_research.py  test_sources.py
tests/integration/: conftest.py  test_api_client.py  test_artifacts.py  test_download_multi_artifact.py  test_notebooks.py  test_vcr_comprehensive.py  test_vcr_real_api.py
tests/unit/: test_api_coverage.py  test_artifact_downloads.py  test_auth.py  test_cli.py  test_conversation.py  test_download_helpers.py  test_encoder.py  test_notes_unit.py  test_research.py  test_rpc_types.py  test_services_new.py  test_sources_upload.py  test_types.py  test_youtube_extraction.py
tests/unit/cli/: test_artifact.py  test_resolve.py  test_source.py
